# marker-coverage-itay_vazana

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  compose.yml
docs/: ARCHITECTURE.md  PIPELINE.md  USER_GUIDE.md
include/: ansi.hpp  app.hpp  progress.hpp  ui.hpp
include/mce/: ansi.hpp  app.hpp  coverage.hpp  detect_and_compute.hpp  detector.hpp  log.hpp  progress.hpp  ui.hpp
outputs/results/: 20250817-101918.csv  20250817-104808.csv  20250817-110619.csv  20250817-113208.csv  20250817-212047.csv
src/: app.cpp  coverage.cpp  detect_and_compute.cpp  detector.cpp  log.cpp  main.cpp  main_cli.cpp  progress.cpp  ui.cpp
